--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -17,13 +18,15 @@
     "axios": "^1.6.8",
     "expo": "^51.0.0",
     "expo-status-bar": "^1.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
