--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "^51.0.0",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "^1.12.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
