--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
